<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#EAEA9D"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/minimo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/valores"
        android:textColor="#000000"
        android:textSize="19sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/minimo"
        android:textColor="#000000"
        android:textSize="19sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/insertmin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number|numberDecimal" />

    <requestFocus />

    <TextView
        android:id="@+id/maximo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/maximo"
        android:textColor="#000000"
        android:textSize="19sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/insertmax"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number|numberDecimal" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/aplicar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/aplicar" />

        <Button
            android:id="@+id/cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/cerrar" >
        </Button>
    </LinearLayout>

</LinearLayout>