<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAEA9D"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/rango"
        android:textColor="#000000"
        android:textSize="19sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:paddingTop="30dp" >

        <TextView
            android:id="@+id/des"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desde"
            android:textColor="#000000"
            android:textSize="19sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/desde"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:inputType="number|numberDecimal" />

        <requestFocus />

        <TextView
            android:id="@+id/has"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hasta"
            android:textColor="#000000"
            android:textSize="19sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/hasta"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:inputType="number|numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/aplicar"></Button>"

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/cancelar"></Button>
    </LinearLayout>

</LinearLayout>