<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAEA9D"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/frames"
        android:textColor="#000000"
        android:textSize="19sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radiogrupo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" >

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="60s" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="120s" />

        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="180s" />

        <RadioButton
            android:id="@+id/radio4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="240s" />

        <RadioButton
            android:id="@+id/radio5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="300s" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/parametros"
        android:textColor="#000000"
        android:textSize="19sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" >

        <CheckBox
            android:id="@+id/checksdnn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SDNN" />

        <CheckBox
            android:id="@+id/checksdann"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="SDANN" />

        <CheckBox
            android:id="@+id/checksdnnidx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SDNNIDX" />

        <CheckBox
            android:id="@+id/checkpnn50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="PNN50" />

        <CheckBox
            android:id="@+id/checkrmssd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="r-MSSD" />

        <CheckBox
            android:id="@+id/checkmadrr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="MADRR" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/calcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="15dp"
            android:text="@string/calcular" />

        <Button
            android:id="@+id/cerrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="15dp"
            android:text="@string/cerrar" />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TextView
            android:id="@+id/resultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="14sp" />
    </ScrollView>

</LinearLayout>